--- a/style.css
+++ b/style.css
@@ -133,10 +133,26 @@ h2 {
 
 .navbar ul li a {
   color: #fff;
+  transition: 0.6s ease;
 }
 
 .navbar ul li a:hover {
   color: #ef7829;
+}
+
+.hamburger {
+  display: none;
+  cursor: pointer;
+}
+
+.bar {
+  display: block;
+  width: 25px;
+  height: 3px;
+  margin: 5px auto;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  background-color: #fff;
 }
 
 .container {
@@ -500,6 +516,86 @@ footer a {
   display: flex;
   flex-direction: row;
   gap: 1em;
+}
+
+@media screen and (max-width: 744px) {
+  .container {
+    padding: 0 12px;
+  }
+
+  .logo {
+    width: 15em;
+  }
+
+  .hamburger {
+    display: block;
+  }
+
+  .hamburger.active .bar:nth-child(2) {
+    opacity: 0;
+  }
+
+  .hamburger.active .bar:nth-child(1) {
+    transform: translateY(8px) rotate(45deg);
+  }
+
+  .hamburger.active .bar:nth-child(3) {
+    transform: translateY(-8px) rotate(-45deg);
+  }
+
+  .nav-menu {
+    z-index: 10;
+    position: fixed;
+    right: -100%;
+    top: 110px;
+    gap: 0;
+    flex-direction: column;
+    background-color: #ef7829;
+    width: 100%;
+    text-align: center;
+    transition: 0.3s;
+  }
+
+  .nav-menu.active {
+    right: 0;
+  }
+
+  .navbar ul {
+    padding: 16px;
+    gap: 1em;
+  }
+
+  .navbar ul li a:hover {
+    color: #000;
+  }
+
+  .hero-content h1 {
+    font-size: 3.5em;
+  }
+
+  .hero-content p {
+    width: 100%;
+    margin: auto;
+    font-size: 1em;
+    line-height: 1.3em;
+  }
+
+  .hero-content-buttons {
+    flex-direction: column;
+    gap: 16px;
+  }
+
+  .text-content {
+    background-color: #ef7829;
+    padding: 64px 12px;
+    margin-bottom: 6em;
+  }
+
+  .text-content h2 {
+    font-weight: 300;
+    font-size: 1.5em;
+    text-align: center;
+  }
 }
 
 @media screen and (max-width: 1440px) {
