--- a/style.css
+++ b/style.css
@@ -523,6 +523,10 @@ footer a {
     padding: 0 12px;
   }
 
+  .hero {
+    height: 100vh;
+  }
+
   .logo {
     width: 15em;
   }
@@ -618,6 +622,24 @@ footer a {
     flex-direction: column;
     align-items: center;
     gap: 2em;
+  }
+
+  .dealer-newsletter {
+    padding: 64px 0;
+    height: 100%;
+  }
+
+  .dealer-newsletter h2 {
+    font-size: 2em;
+    width: 80%;
+  }
+
+  .dealer-form {
+    width: 100%;
+  }
+
+  .dealer-form p {
+    font-size: 0.8em;
   }
 }
 
