--- a/style.css
+++ b/style.css
@@ -206,6 +206,13 @@ h2 {
   height: 600px;
 }
 
+.hero-strains {
+  background: linear-gradient(rgba(0, 0, 0, 1), rgba(0, 0, 0, 0)), url(images/hero_strains.jpg);
+  background-position: 50%;
+  background-size: cover;
+  height: 600px;
+}
+
 .hero-content {
   margin-top: 15em;
   overflow: hidden;
@@ -303,6 +310,35 @@ h2 {
   margin-bottom: 2em;
 }
 
+/* STRAINS CONTENT */
+
+.hero-content-strains {
+  margin-top: 15em;
+  overflow: hidden;
+  text-align: left;
+}
+
+.hero-content-strains h1 {
+  font-family: Merriweather, serif;
+  font-weight: 400;
+  font-size: 4em;
+  color: #fff;
+  margin-bottom: 0.2em;
+}
+
+.hero-content-strains p {
+  color: #fff;
+  font-size: 1.1em;
+}
+
+.strains-header {
+  font-family: Montserrat, sans-serif;
+  font-weight: 600;
+  font-size: 1.7em;
+  padding-top: 2.3em;
+  text-align: left;
+}
+
 /* UNDER HERO TEXT */
 
 .text-content {
@@ -387,6 +423,7 @@ h2 {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 2.5em;
+  margin-bottom: 6em;
 }
 
 /* DEALER NEWSLETTER */
@@ -713,6 +750,18 @@ footer a {
 
   .about-content h4 {
     font-size: 2em;
+  }
+
+  /* STRAINS PAGE */
+
+  .hero-content-strains {
+    margin-top: 10em;
+  }
+
+  .card-collection-grid {
+    grid-template-columns: 1fr; /* Set to one column for mobile */
+    justify-content: center; /* Center the content horizontally */
+    align-items: center; /* Center the content vertically */
   }
 
   .text-content {
