--- a/style.css
+++ b/style.css
@@ -7,6 +7,33 @@
   background: #fff;
 }
 
+/* UTILITIES */
+
+@keyframes colorChange {
+  0% {
+    filter: hue-rotate(0deg);
+  }
+  100% {
+    filter: hue-rotate(360deg);
+  }
+}
+
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.change-color {
+  animation: colorChange 4s infinite;
+}
+/* RESET */
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -18,7 +45,7 @@ body {
 }
 
 img {
-  width: 100% !important;
+  width: 100%;
 }
 
 ul {
@@ -133,6 +160,9 @@ h2 {
   transition: 0.3s;
 }
 
+.btn-submit:hover {
+  background-color: #000 !important;
+}
 /* NAV & HERO */
 
 .navbar {
@@ -188,8 +218,9 @@ h2 {
   padding: 0 42px;
 }
 
-.logo {
-  width: 20em;
+.hero-logo-container a img {
+  width: 100% !important;
+  height: 100%;
 }
 
 .hero {
@@ -241,6 +272,7 @@ h2 {
   margin: auto;
   font-size: 1.2em;
   line-height: 1.3em;
+  margin-bottom: 1.5em;
 }
 
 .hero-content h1,
@@ -253,9 +285,14 @@ h2 {
 
 .hero-content-buttons {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
   gap: 2em;
-  padding: 32px;
+}
+
+.hero-content-buttons-sub {
+  display: flex;
+  gap: 2em;
 }
 
 .get-high {
@@ -673,32 +710,6 @@ footer a {
   gap: 2em;
 }
 
-/* UTILITIES */
-
-@keyframes colorChange {
-  0% {
-    filter: hue-rotate(0deg);
-  }
-  100% {
-    filter: hue-rotate(360deg);
-  }
-}
-
-@keyframes fadeInUp {
-  from {
-    opacity: 0;
-    transform: translateY(30px);
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-
-.change-color {
-  animation: colorChange 4s infinite;
-}
-
 @media screen and (max-width: 744px) {
   .container {
     padding: 0 12px;
@@ -708,8 +719,9 @@ footer a {
     height: 100vh;
   }
 
-  .logo {
-    width: 15em;
+  .hero-logo-container a img {
+    width: 75% !important;
+    height: 75%;
   }
 
   .hamburger {
@@ -777,11 +789,18 @@ footer a {
     margin: auto;
     font-size: 1em;
     line-height: 1.3em;
+    margin-bottom: 1.5em;
   }
 
   .hero-content-buttons {
     flex-direction: column;
-    gap: 16px;
+    gap: 1em;
+  }
+
+  .hero-content-buttons-sub {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
   }
 
   /* ABOUT PAGE */
