--- a/style.css
+++ b/style.css
@@ -62,6 +62,10 @@ h2 {
   font-family: Merriweather, serif;
 }
 
+p {
+  line-height: 1.4em;
+}
+
 /* BUTTONS */
 
 .btn {
@@ -463,6 +467,8 @@ h2 {
   grid-template-columns: repeat(3, 1fr);
   gap: 2.5em;
   margin-bottom: 6em;
+  justify-content: center;
+  align-items: center;
 }
 
 /* DEALER NEWSLETTER */
@@ -637,10 +643,50 @@ h2 {
 
 /* 404 PAGE */
 
+.fof-container {
+  display: flex;
+  flex-direction: column;
+  gap: 3em;
+  align-items: center;
+}
+
 .fof {
   height: 100vh;
   background: url(images/404.jpg);
   background-size: cover;
+}
+
+.fof-logo {
+  display: flex;
+  justify-content: center;
+  margin-top: 1em;
+}
+
+.fof-logo img {
+  height: 80px;
+}
+
+.fof-header {
+  color: #fff;
+  text-align: center;
+  font-family: Merriweather, serif;
+  font-size: 16em;
+  text-shadow: rgba(239, 120, 41, 1) 0px 19px 90px, rgba(239, 120, 41, 1) 0px 15px 20px;
+}
+
+.fof-header h1 {
+  box-shadow: rgba(239, 120, 41, 1) 0px 19px 38px, rgba(239, 120, 41, 1) 0px 15px 12px;
+}
+
+.fof-text {
+  color: #fff;
+  font-size: 1.6em;
+  text-align: center;
+}
+
+.bold-text {
+  font-weight: 500;
+  font-size: 2em;
 }
 
 .newsletter {
@@ -823,9 +869,9 @@ footer a {
   }
 
   .card-collection-grid {
-    grid-template-columns: 1fr; /* Set to one column for mobile */
-    justify-content: center; /* Center the content horizontally */
-    align-items: center; /* Center the content vertically */
+    grid-template-columns: 1fr;
+    align-items: center;
+    justify-content: center;
   }
 
   .text-content {
@@ -890,6 +936,19 @@ footer a {
 
   .article-content-alt {
     border-radius: 35px;
+  }
+
+  .fof-header {
+    font-size: 8em;
+  }
+
+  .fof-text {
+    font-size: 1.2em;
+    text-align: center;
+  }
+
+  .bold-text {
+    font-size: 1.3em;
   }
 
   .newsletter {
