--- a/style.css
+++ b/style.css
@@ -471,6 +471,11 @@ p {
   align-items: center;
 }
 
+.product-card {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 /* DEALER NEWSLETTER */
 
 .dealer-newsletter {
@@ -791,7 +796,7 @@ footer a {
 
   .nav-menu {
     z-index: 10;
-    position: fixed;
+    position: absolute;
     right: -100%;
     top: 110px;
     gap: 0;
@@ -804,6 +809,12 @@ footer a {
 
   .nav-menu.active {
     right: 0;
+  }
+
+  .nav-menu-socials {
+    display: flex;
+    justify-content: center;
+    gap: 1em;
   }
 
   .navbar ul {
@@ -870,8 +881,6 @@ footer a {
 
   .card-collection-grid {
     grid-template-columns: 1fr;
-    align-items: center;
-    justify-content: center;
   }
 
   .text-content {
